hosts/midnight-runner/kubernetes/apps/base/jitsi/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi-http-redirect
spec:
  parentRefs:
    - name: jfp-one
      namespace: networking
      sectionName: http
  hostnames:
    - talk.jfp.one
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi
spec:
  parentRefs:
    - name: jfp-one
      namespace: networking
      sectionName: https
  hostnames:
    - talk.jfp.one
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jitsi-meet-web
          port: 80
